tests/baselines/reference/tsxDynamicTagName4.errors.txt
tsxDynamicTagName4.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== tsxDynamicTagName4.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		div: any
    		h1: any
    	}
    }
    
    var CustomTag: "h1" = "h1";
    <CustomTag> Hello World </CustomTag>